sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/InboundProfile__c.object-meta.xml
<CustomObject>
    <label>受信プロフィール</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>受信プロフィール番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>