sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>市区郡</label>
    <length>40</length>
    <type>Text</type>
</CustomField>