sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>部署</label>
    <length>80</length>
    <type>Text</type>
</CustomField>