sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>名</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>