sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/InboundProfileNotificationFlg__c.field-meta.xml
<CustomField>
    <fullName>InboundProfileNotificationFlg__c</fullName>
    <formula>OutboundProfile__r.InboundProfileNotificationFlg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受信プロフィール通知要否</label>
    <type>Checkbox</type>
</CustomField>