sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>メッセージ</label>
    <type>TextArea</type>
</CustomField>