sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/NotificationEmail__c.field-meta.xml
<CustomField>
    <fullName>NotificationEmail__c</fullName>
    <label>通知メール宛先</label>
    <type>Email</type>
</CustomField>