sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/NotificationEmailFormula__c.field-meta.xml
<CustomField>
    <fullName>NotificationEmailFormula__c</fullName>
    <formula>OutboundProfile__r.Owner:User.Email</formula>
    <label>通知メール宛先(数式)</label>
    <type>Text</type>
</CustomField>