sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/OutboundProfile__c.field-meta.xml
<CustomField>
    <fullName>OutboundProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送信プロフィール</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OutboundProfile__c.Parent__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OutboundProfile__c</referenceTo>
    <relationshipLabel>受信プロフィール</relationshipLabel>
    <relationshipName>InboundProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>