sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>郵便番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>