sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>町名・番地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>