sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/Tel2__c.field-meta.xml
<CustomField>
    <fullName>Tel2__c</fullName>
    <inlineHelpText>直通番号や内線番号を記入します</inlineHelpText>
    <label>電話番号2</label>
    <type>Phone</type>
</CustomField>