sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Web サイト</label>
    <type>Url</type>
</CustomField>