sfdx-source/OnlineProfile/main/default/objects/InboundProfile__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>CompanyName__c</columns>
    <columns>LastName__c</columns>
    <columns>FirstName__c</columns>
    <columns>Email__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>今日</label>
</ListView>